# monowiki

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md  install.sh  monowiki.yml  monowiki.yml.example
.github/workflows/: deploy-pages.yml  release.yml
editor/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
editor/src/: agent-panel.ts  api.ts  cross-block.test.ts  cross-block.ts  editor.ts  main.ts  preview.ts  style.css
editor/tests/: e2e-smoke.spec.ts
monowiki-adapters/: Cargo.toml
monowiki-adapters/src/: lang_python.rs  lang_rust.rs  lang_zig.rs  lib.rs  rust.rs
monowiki-agent/: Cargo.toml
monowiki-agent/src/: agent.rs  client.rs  context.rs  document.rs  lib.rs  prompts.rs  state.rs  tools.rs  types.rs
monowiki-cli/: Cargo.toml
monowiki-cli/src/: agent.rs  cache.rs  main.rs
monowiki-cli/src/commands/: adapters.rs  build.rs  changes.rs  comment.rs  dev.rs  editor.rs  export.rs  github_pages.rs  graph.rs  init.rs  mod.rs  note.rs  pipeline.rs  search.rs  status.rs  verify.rs  watch.rs
monowiki-cli/tests/: cli_search.rs
monowiki-collab/: Cargo.toml  build.rs
monowiki-collab/src/: agent.rs  auth.rs  build.rs  cli.rs  config.rs  crdt.rs  git.rs  lib.rs  main.rs  migration.rs  operational.rs  projection.rs  ratelimit.rs  render.rs  sammy_reactor.rs  server.rs  yrs_adapter.rs
monowiki-collab/src/loro/: doc.rs  mod.rs
monowiki-collab/tests/: operational_trait_tests.rs
monowiki-core/: Cargo.toml
monowiki-core/src/: bibliography.rs  builder.rs  config.rs  frontmatter.rs  lib.rs  models.rs  pipeline.rs  search.rs  slug.rs
monowiki-core/src/markdown/: citations.rs  debug_events.rs  highlight.rs  math.rs  mathjax.rs  mod.rs  nota_blocks.rs  sidenotes.rs  test_integration.rs  typst_math.rs  wikilinks.rs
monowiki-incremental/: Cargo.toml
monowiki-incremental/benches/: query_bench.rs
monowiki-incremental/src/: cache.rs  db.rs  durability.rs  invalidation.rs  lib.rs  memo.rs  metrics.rs  query.rs
monowiki-incremental/src/queries/: expand.rs  layout.rs  mod.rs  parse.rs  source.rs
monowiki-incremental/tests/: integration_tests.rs
monowiki-mrl/: Cargo.toml
monowiki-mrl/src/: checker.rs  content.rs  document.rs  enforest.rs  error.rs  expander.rs  hygiene.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  rules.rs  shrubbery.rs  types.rs
monowiki-mrl/src/tests/: hygiene_tests.rs  integration.rs  lexer_tests.rs  mod.rs  parser_tests.rs  type_tests.rs
monowiki-render/: Cargo.toml
monowiki-render/src/: lib.rs  templates.rs
monowiki-render/templates/: 404.html  api.html  index.html  post.html
monowiki-runtime/: Cargo.toml
monowiki-runtime/src/: abi.rs  dataspace.rs  diagnostics.rs  emitter.rs  engine.rs  host.rs  html.rs  interpreter.rs  kernel.rs  lib.rs  livecell_codegen.rs  sammy_config.rs  schemas.rs  signals.rs  ui.rs
monowiki-runtime/src/tests/: mod.rs
monowiki-runtime/tests/: engine_tests.rs  test_wasm.wat
monowiki-runtime/wit/: runtime.wit
monowiki-types/: Cargo.toml
monowiki-types/src/: lib.rs
sammy/: Cargo.toml
sammy/src/: lib.rs  types.rs
sammy/src/actor/: entity.rs  facet.rs  mod.rs
sammy/src/assertion/: mod.rs  store.rs  subscription.rs
sammy/src/dataspace/: capability.rs  local.rs  mod.rs
sammy/src/pattern/: mod.rs  tree.rs
sammy/src/runtime/: entity.rs  error.rs  mod.rs  state.rs  types.rs
static/css/: api.css  graph.css  previews.css  search.css  style.css
tests/integration/: pipeline_test.rs
theme/: package-lock.json  package.json  tsconfig.json  vite.config.ts
theme/src/: copy-code.ts  copy-page.ts  darkmode.ts  graph-visual.ts  graph.ts  main.ts  math-copy.ts  previews.ts  search.ts  site-context.test.ts  site-context.ts  toc.ts
vault/: design.md  index.md  mrl.md
vault/comments/: comments-demo-annot.md
vault/design/: design.md  mrl.md  mwd-execution.md
vault/docs/monowiki-core/bibliography/: Bibliography.md  BibliographyStore.md
vault/docs/monowiki-core/bibliography/Bibliography/: get.md  is_empty.md
vault/docs/monowiki-core/bibliography/BibliographyStore/: collect.md  preload_paths.md  take_diagnostics.md
vault/docs/monowiki-core/builder/: SiteBuilder.md
vault/docs/monowiki-core/builder/SiteBuilder/: build.md
vault/docs/monowiki-core/config/: Config.md  normalize_base_url.md
vault/docs/monowiki-core/config/Config/: bibliography_paths.md  from_file.md  get.md  normalized_base_url.md  output_dir.md  resolve_relative.md  templates_dir.md  theme_dir.md  theme_overrides_dir.md  vault_dir.md
vault/docs/monowiki-core/frontmatter/: extract_frontmatter.md  parse_frontmatter.md
vault/docs/monowiki-core/markdown/: MarkdownProcessor.md
vault/docs/monowiki-core/markdown/MarkdownProcessor/: convert.md  convert_simple.md
vault/docs/monowiki-core/markdown/citations/: CitationContext.md  CitationRef.md  CitationTransformer.md  render_references.md
vault/docs/monowiki-core/markdown/highlight/: HighlightTransformer.md
vault/docs/monowiki-core/markdown/math/: MathTransformer.md
vault/docs/monowiki-core/markdown/sidenotes/: SidenoteTransformer.md
vault/docs/monowiki-core/markdown/typst_math/: TypstMathRenderer.md
vault/docs/monowiki-core/markdown/wikilinks/: WikilinkTransformer.md
vault/docs/monowiki-core/models/: Diagnostic.md  DiagnosticSeverity.md  Frontmatter.md  LinkGraph.md  Note.md  NoteType.md  SiteIndex.md
vault/docs/monowiki-core/models/LinkGraph/: add_link.md  backlinks.md  outgoing.md
vault/docs/monowiki-core/search/: SectionDigest.md  build_search_index.md  section_digests_from_html.md
vault/docs/monowiki-core/slug/: normalize_slug.md  slugify.md
vault/essays/: comments-demo.md  configuration.md  getting-started.md  markdown-features.md  nota-like-math.md
vault/references/: nota.bib
vault/sprints/: AGENT.md  crdt-migration-plan.md  sprint-01-semantic-operational.md  sprint-02-shrubbery-expander-incremental.md  sprint-03-typing-showset-crdt-strategy.md  sprint-04-macro-staging-cache.md  sprint-05-actor-runtime-wit.md  sprint-06-plugins-exec-integration.md
(+16 files in other folders)
