[workspace]
resolver = "2"
members = [
    "monowiki-core",
    "monowiki-cli",
    "monowiki-render",
    "monowiki-adapters",
]

[workspace.package]
version = "0.3.7"
authors = ["femtomc"]
edition = "2021"
license = "MIT"
repository = "https://github.com/femtomc/monowiki"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.145"

# Markdown processing
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }

# Templating
askama = { version = "0.14.0", features = ["serde_json"] }

# Syntax highlighting
syntect = "5.3.0"

# Misc
once_cell = "1.21.3"

# File system
walkdir = "2.5"
notify = "8.2.0"

# HTTP/Server
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }

# CLI
clap = { version = "4.5.53", features = ["derive", "env"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Utilities
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
regex = "1.12.2"
unicode-segmentation = "1.12.0"
lru = "0.12.3"
hayagriva = "0.9.1"
include_dir = "0.7.4"
blake3 = "1.5.5"
similar = "2.5.0"

# Testing
insta = "1.44.1"
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
