[package]
name = "monowiki-adapters"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language-agnostic code documentation adapters using tree-sitter"

[dependencies]
monowiki-core = { path = "../monowiki-core" }

serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
walkdir.workspace = true
tracing.workspace = true

# Tree-sitter for language-agnostic parsing
tree-sitter = "0.24"

# Language grammars (feature-gated)
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-zig = { version = "1.1", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[features]
default = ["rust", "python", "zig"]
rust = ["dep:tree-sitter-rust"]
python = ["dep:tree-sitter-python"]
zig = ["dep:tree-sitter-zig"]
typescript = ["dep:tree-sitter-typescript"]
go = ["dep:tree-sitter-go"]
all-languages = ["rust", "python", "zig", "typescript", "go"]
