[package]
name = "monowiki-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI agent for codebase investigation and documentation"

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }
glob = "0.3"
async-trait = "0.1"

# Streaming
tokio-stream = "0.1"
async-stream = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
