[package]
name = "monowiki-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for monowiki static site generator"

[[bin]]
name = "monowiki"
path = "src/main.rs"

[dependencies]
monowiki-core = { path = "../monowiki-core" }
monowiki-render = { path = "../monowiki-render" }
monowiki-adapters = { path = "../monowiki-adapters" }

clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
notify.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
askama.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_yaml.workspace = true
include_dir.workspace = true
open = "5"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
