[package]
name = "monowiki-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for monowiki static site generator"

[dependencies]
# Workspace crates
monowiki-types = { path = "../monowiki-types" }
monowiki-mrl = { path = "../monowiki-mrl" }
monowiki-incremental = { path = "../monowiki-incremental" }
# Note: monowiki-collab is NOT a dependency to avoid circular deps
# The collab crate depends on core, so core cannot depend on collab

serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
pulldown-cmark.workspace = true
walkdir.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
unicode-segmentation.workspace = true
tracing.workspace = true
syntect.workspace = true
typst.workspace = true
typst-svg.workspace = true
typst-as-lib.workspace = true
typst-assets.workspace = true
once_cell.workspace = true
lru.workspace = true
hayagriva.workspace = true

[features]
default = []

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
