[package]
name = "monowiki-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for monowiki static site generator"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
pulldown-cmark.workspace = true
walkdir.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
unicode-segmentation.workspace = true
tracing.workspace = true
syntect.workspace = true
once_cell.workspace = true
lru.workspace = true
hayagriva.workspace = true
blake3.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
