[package]
name = "monowiki-incremental"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Incremental computation engine for monowiki"

[dependencies]
# Workspace crates
monowiki-types = { path = "../monowiki-types" }
monowiki-mrl = { path = "../monowiki-mrl" }

# Concurrency
parking_lot = "0.12"
dashmap = "6.1"

# Hashing
hashbrown = "0.15"
blake3 = "1.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
criterion = "0.5"

[[bench]]
name = "query_bench"
harness = false
