[package]
name = "monowiki-mrl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
unicode-segmentation.workspace = true
logos = "0.14"

[dev-dependencies]
insta.workspace = true
