[package]
name = "monowiki-render"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Template rendering library for monowiki"

[dependencies]
monowiki-core = { path = "../monowiki-core" }

askama.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
